[package]
name = "spv"
version = "0.1.0"
authors = ["Justin Moon <mail@justinmoon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version= "0.23", features=["use-serde"]}
rand = "0.7.3"
bitcoin_hashes = "0.7.6"
sled = "0.32.0"
hex = "0.3"

serde_json = "1.0.55"
serde = { version = "1.0.114", features = ["derive", "rc"] }
